added links to other websites

--- a/Assignments/A3Encyclopedia/A3.html
+++ b/Assignments/A3Encyclopedia/A3.html
@@ -48,29 +48,29 @@
     <h3>Contents</h3>
         <ol>
             <li><a href="#Etymology">Etymology</a></li>
-            <li><a href="#Taxonomy and evolution">Taxonomy and evolution</a></li>
+            <li><a href="#Taxonomy_Evolution">Taxonomy and evolution</a></li>
                 <ol>
-                    <li>Subspecies</li>
-                    <li>Evolution</li>
+                    <li><a href="#Subspecies">Subspecies</a></li>
+                    <li><a href="#Evolution">Evolution</a></li>
                 </ol>
-            <li>Description</li>
-            <li>Ecology and behaviour</li>
+            <li><a href="#Description">Description</a></li>
+            <li><a href="#Ecology_Behavior">Ecology and behaviour</a></li>
                 <ol>
-                    <li>Parasites</li>
-                    <li>Diet</li>
-                    <li>Reproduction</li>
+                    <li><a href="#Parasites">Parasites</a></li>
+                    <li><a href="#Diet">Diet</a></li>
+                    <li><a href="#Reproduction">Reproduction</a></li>
                 </ol>
-            <li>Distribution and habitat</li>
-            <li>Threats and conservation</li>
-            <li>Relationship with humans</li>
-            <li>References</li>
-            <li>External links</li>
+            <li><a href="#Distribution_Habitat">Distribution and habitat</a></li>
+            <li><a href="#Threats_Conservation">Threats and conservation</a></li>
+            <li><a href="#Human_Relationship">Relationship with humans</a></li>
+            <li><a href="#References">References</a></li>
+            <li><a href="#External_Links">External links</a></li>
         </ol>
 
     <h2 id="Etymology">Etymology</h2>
     <p>The common name "springbok", first recorded in 1775, comes from the Afrikaans words <em>spring</em> ("jump") and <em>bok</em> ("antelope" or "goat").[2] The scientific name of the springbok is <em>Antidorcas marsupialis</em>. <em>Anti</em> is Greek for "opposite", and <em>dorcas</em> for "gazelle" – identifying the animal as not a gazelle. The specific epithet <em>marsupialis</em> comes from the Latin <em>marsupium</em> ("pocket"), and refers to a pocket-like skin flap which extends along the midline of the back from the tail,[3] which distinguishes the springbok from true gazelles.[4]</p>
 
-    <h2 id="Taxonomy and evolution">Taxonomy and evolution</h2>
+    <h2 id="TaxonomyEvolution">Taxonomy and evolution</h2>
     <p>The springbok, in the family Bovidae,[5] was first described by the German zoologist Eberhard August Wilhelm von Zimmermann in 1780, who assigned the genus <em>Antilope</em> (blackbuck) to the springbok.[6] In 1845, Swedish zoologist Carl Jakob Sundevall placed the springbok as the sole living member of the genus <em>Antidorcas</em>.[7]</p>
     <h3>Subspecies</h3>
     <p>Three subspecies of <em>Antidorcas marsupialis</em> are recognised:[2][8]</p>
@@ -145,45 +145,60 @@
         <img src="Springbok_Feeding.jpg">
         <figcaption>Springbok feed on succulent grasses.</figcaption>
     </figure>
-<p>Springbok are primarily browsers and may switch to grazing occasionally; they feed on shrubs and young succulents (such as Lampranthus species) before they lignify.[24] They prefer grasses such as Themeda triandra. Springbok can meet their water needs from the food they eat, and are able to survive without drinking water through dry season. In extreme cases, they do not drink any water over the course of their lives. Springbok may accomplish this by selecting flowers, seeds, and leaves of shrubs before dawn, when the food items are most succulent.[25] In places such as Etosha National Park, springbok seek out water bodies where they are available.[24] Springbok gather in the wet season and disperse during the dry season, unlike other African mammals.[24]</p>
+    <p>Springbok are primarily browsers and may switch to grazing occasionally; they feed on shrubs and young succulents (such as Lampranthus species) before they lignify.[24] They prefer grasses such as Themeda triandra. Springbok can meet their water needs from the food they eat, and are able to survive without drinking water through dry season. In extreme cases, they do not drink any water over the course of their lives. Springbok may accomplish this by selecting flowers, seeds, and leaves of shrubs before dawn, when the food items are most succulent.[25] In places such as Etosha National Park, springbok seek out water bodies where they are available.[24] Springbok gather in the wet season and disperse during the dry season, unlike other African mammals.[24]</p>
 
     <h3>Reproduction</h3>
-<figure>
-    <img src="Springbok_Suckling.jpg">
-    <figcaption>A mother suckling her offspring</figcaption>
-</figure>
-<p>Springbok mate year-round, though females are more likely to enter oestrus during the rainy season, when food is more plentiful.[13] Females are able to conceive at as early as six to seven months, whereas males do not attain sexual maturity until two years;[4] rut lasts 5 to 21 days.[12] When a female approaches a rutting male, the male holds his head and tail at level with the ground, lowers his horns, and makes a loud grunting noise to attract her. The male then urinates and sniffs the female's perineum. If the female is receptive, she urinates, as well, and the male makes a flehmen gesture, and taps his leg till the female leaves or permits him to mate.[3][26] Copulation consists of a single pelvic thrust.[27]</p>
+    <figure>
+        <img src="Springbok_Suckling.jpg">
+        <figcaption>A mother suckling her offspring</figcaption>
+    </figure>
+    <p>Springbok mate year-round, though females are more likely to enter oestrus during the rainy season, when food is more plentiful.[13] Females are able to conceive at as early as six to seven months, whereas males do not attain sexual maturity until two years;[4] rut lasts 5 to 21 days.[12] When a female approaches a rutting male, the male holds his head and tail at level with the ground, lowers his horns, and makes a loud grunting noise to attract her. The male then urinates and sniffs the female's perineum. If the female is receptive, she urinates, as well, and the male makes a flehmen gesture, and taps his leg till the female leaves or permits him to mate.[3][26] Copulation consists of a single pelvic thrust.[27]</p>
 
-<p>Gestation lasts five to six months, after which a single calf (or rarely twins) is born.[13] Most births take place in the spring (October to November), prior to the onset of the rainy season.[12] The infant weighs 3.8 to 5 kg (8.4 to 11.0 lb). The female keeps her calf hidden in cover while she is away. Mother and calf rejoin the herd about three to four weeks after parturition; the young are weaned at five or six months. When the mother gives birth again, the previous offspring, now 6 to 12 months old, deserts her to join herds of adult springbok. Thus, a female can calve twice a year, and even thrice if one calf dies.[3][14] Springbok live for up to 10 years in the wild.[2]</p>
+    <p>Gestation lasts five to six months, after which a single calf (or rarely twins) is born.[13] Most births take place in the spring (October to November), prior to the onset of the rainy season.[12] The infant weighs 3.8 to 5 kg (8.4 to 11.0 lb). The female keeps her calf hidden in cover while she is away. Mother and calf rejoin the herd about three to four weeks after parturition; the young are weaned at five or six months. When the mother gives birth again, the previous offspring, now 6 to 12 months old, deserts her to join herds of adult springbok. Thus, a female can calve twice a year, and even thrice if one calf dies.[3][14] Springbok live for up to 10 years in the wild.[2]</p>
 
-<h2>Distribution and habitat</h2>
-<figure>
-    <img src="Etosha_Pan_Springbok.jpg">
-    <figcaption>Springboks on the Etosha pan</figcaption>
-</figure>
-<p>Springbok inhabit the dry areas of south and southwestern Africa. Their range extends from northwestern South Africa through the Kalahari desert into Namibia and Botswana. The Transvaal marks the eastern limit of the range, from where it extends westward to the Atlantic and northward to southern Angola and Botswana. In Botswana, they mostly occur in the Kalahari desert in the southwestern and central parts of the country. They are widespread across Namibia and the vast grasslands of the Free State and the shrublands of Karoo in South Africa; however, they are confined to the Namib Desert in Angola.[18]</p>
+    <h2>Distribution and habitat</h2>
+    <figure>
+        <img src="Etosha_Pan_Springbok.jpg">
+        <figcaption>Springboks on the Etosha pan</figcaption>
+    </figure>
+    <p>Springbok inhabit the dry areas of south and southwestern Africa. Their range extends from northwestern South Africa through the Kalahari desert into Namibia and Botswana. The Transvaal marks the eastern limit of the range, from where it extends westward to the Atlantic and northward to southern Angola and Botswana. In Botswana, they mostly occur in the Kalahari desert in the southwestern and central parts of the country. They are widespread across Namibia and the vast grasslands of the Free State and the shrublands of Karoo in South Africa; however, they are confined to the Namib Desert in Angola.[18]</p>
 
-<p>The historic range of the springbok stretched across the dry grasslands, bushlands, and shrublands of south-western and southern Africa; springbok migrated sporadically in southern parts of the range. These migrations are rarely seen nowadays, but seasonal congregations can still be observed in preferred areas of short vegetation, such as the Kalahari desert.[24]</p>
+    <p>The historic range of the springbok stretched across the dry grasslands, bushlands, and shrublands of south-western and southern Africa; springbok migrated sporadically in southern parts of the range. These migrations are rarely seen nowadays, but seasonal congregations can still be observed in preferred areas of short vegetation, such as the Kalahari desert.[24]</p>
 
-<h2>Threats and conservation</h2>
-<p>The springbok has been classified as least concern on the IUCN Red List. No major threats to the long-term survival of the species are known.[28] The springbok is one of the few antelope species with a positive population trend.[24][29]</p>
+    <h2>Threats and conservation</h2>
+    <p>The springbok has been classified as least concern on the IUCN Red List. No major threats to the long-term survival of the species are known.[28] The springbok is one of the few antelope species with a positive population trend.[24][29]</p>
 
-<p>Springbok occur in several protected areas across their range: Makgadikgadi and Nxai National Park (Botswana); Kgalagadi Transfrontier Park between Botswana and South Africa; Etosha National Park and Namib-Naukluft Park (Namibia); Mokala and Karoo National Parks and a number of provincial reserves in South Africa.[28] In 1999, Rod East of the IUCN SSC Antelope Specialist Group estimated the springbok population in South Africa at more than 670,000, noting that it might be an underestimate. However, estimates for Namibia, Angola, Botswana, Transvaal, Karoo, and the Free State (which gave a total population estimate of nearly 2,000,000 – 2,500,000 animals in southern Africa), were in complete disagreement with East's estimate. Springbok are under active management in several private lands. Small populations have been introduced into private lands and provincial areas of KwaZulu-Natal.[28][24]</p>
+    <p>Springbok occur in several protected areas across their range: Makgadikgadi and Nxai National Park (Botswana); Kgalagadi Transfrontier Park between Botswana and South Africa; Etosha National Park and Namib-Naukluft Park (Namibia); Mokala and Karoo National Parks and a number of provincial reserves in South Africa.[28] In 1999, Rod East of the IUCN SSC Antelope Specialist Group estimated the springbok population in South Africa at more than 670,000, noting that it might be an underestimate. However, estimates for Namibia, Angola, Botswana, Transvaal, Karoo, and the Free State (which gave a total population estimate of nearly 2,000,000 – 2,500,000 animals in southern Africa), were in complete disagreement with East's estimate. Springbok are under active management in several private lands. Small populations have been introduced into private lands and provincial areas of KwaZulu-Natal.[28][24]</p>
 
-<h2>Relationship with humans</h2>
-<figure>
-    <img src="Springbok_Coin_5Shilling.png">
-    <figcaption>Silver coin: 5 shilling, 1949 – Springbok in the center, date above, value below</figcaption>
-</figure>
-<figure>
-    <img src="Springbok_SouthAfrica_Stamp_1923.jpg">
-    <figcaption>Postage stamp, South Africa, 1923</figcaption>
-</figure>
-<p>Springbok are hunted as game throughout Namibia, Botswana, and South Africa because of their attractive coats; they are common hunting targets due to their large numbers and the ease with which they can be supported on farmlands. The export of springbok skins, mainly from Namibia and South Africa, is a booming industry; these skins serve as taxidermy models.[28] The meat is a prized fare, and is readily available in South African supermarkets.[30] As of 2011, the springbok, the gemsbok, and the greater kudu collectively account for around two-thirds of the game meat production from Namibian farmlands; nearly 90 tonnes (89 long tons; 99 short tons) of the springbok meat is exported as mechanically deboned meat to overseas markets.[31]</p>
-<p>The latissimus dorsi muscle of the springbok comprises 1.1–1.3% ash, 1.3–3.5% fat, 72–75% moisture and 18–22% protein.[32] Stearic acid is the main fatty acid, accounting for 24–27% of the fatty acids. The cholesterol content varies from 54.5 to 59.0 milligrams (0.841 to 0.911 gr) per 100 grams (3.5 oz) of meat.[33] The pH of the meat increases if the springbok is under stress or cropping is done improperly; consequently, the quality deteriorates and the colour darkens.[34] The meat might be adversely affected if the animal is killed by shooting.[35] The meat may be consumed raw or used in prepared dishes. Biltong can be prepared by preserving the raw meat with vinegar, spices, and table salt, without fermentation, followed by drying. Springbok meat may also be used in preparing salami; a study found that the flavour of this salami is better than mutton salami, and feels oilier than salami of beef, horse meat, or mutton.[30]</p>
+    <h2>Relationship with humans</h2>
+    <figure>
+        <img src="Springbok_Coin_5Shilling.png">
+        <figcaption>Silver coin: 5 shilling, 1949 – Springbok in the center, date above, value below</figcaption>
+    </figure>
+    <figure>
+        <img src="Springbok_SouthAfrica_Stamp_1923.jpg">
+        <figcaption>Postage stamp, South Africa, 1923</figcaption>
+    </figure>
+    <p>Springbok are hunted as game throughout Namibia, Botswana, and South Africa because of their attractive coats; they are common hunting targets due to their large numbers and the ease with which they can be supported on farmlands. The export of springbok skins, mainly from Namibia and South Africa, is a booming industry; these skins serve as taxidermy models.[28] The meat is a prized fare, and is readily available in South African supermarkets.[30] As of 2011, the springbok, the gemsbok, and the greater kudu collectively account for around two-thirds of the game meat production from Namibian farmlands; nearly 90 tonnes (89 long tons; 99 short tons) of the springbok meat is exported as mechanically deboned meat to overseas markets.[31]</p>
+    <p>The latissimus dorsi muscle of the springbok comprises 1.1–1.3% ash, 1.3–3.5% fat, 72–75% moisture and 18–22% protein.[32] Stearic acid is the main fatty acid, accounting for 24–27% of the fatty acids. The cholesterol content varies from 54.5 to 59.0 milligrams (0.841 to 0.911 gr) per 100 grams (3.5 oz) of meat.[33] The pH of the meat increases if the springbok is under stress or cropping is done improperly; consequently, the quality deteriorates and the colour darkens.[34] The meat might be adversely affected if the animal is killed by shooting.[35] The meat may be consumed raw or used in prepared dishes. Biltong can be prepared by preserving the raw meat with vinegar, spices, and table salt, without fermentation, followed by drying. Springbok meat may also be used in preparing salami; a study found that the flavour of this salami is better than mutton salami, and feels oilier than salami of beef, horse meat, or mutton.[30]</p>
 
-<p>The springbok has been a national symbol of South Africa since the white minority rule in the 20th century. It was adopted as a nickname or mascot by several South African sports teams, most famously by the national rugby union team. The springbok is the national animal of South Africa. Even after the decline of apartheid, Nelson Mandela intervened to keep the name of the animal for the reconciliation of rugby fans, the majority of whom were whites.[36][37] The springbok is featured on the reverse of the South African Krugerrand coin.[38][39]</p>
+    <p>The springbok has been a national symbol of South Africa since the white minority rule in the 20th century. It was adopted as a nickname or mascot by several South African sports teams, most famously by the national rugby union team. The springbok is the national animal of South Africa. Even after the decline of apartheid, Nelson Mandela intervened to keep the name of the animal for the reconciliation of rugby fans, the majority of whom were whites.[36][37] The springbok is featured on the reverse of the South African Krugerrand coin.[38][39]</p>
 
-<p>The cap badge of The Royal Canadian Dragoons has featured a springbok since 1913, a reference to the unit's involvement in the Second Boer War.[40]</p>
+    <p>The cap badge of The Royal Canadian Dragoons has featured a springbok since 1913, a reference to the unit's involvement in the Second Boer War.[40]</p>
+
+    <h2 id="External_Links">External Links</h2>
+    <p><a href="https://en.wikipedia.org/wiki/Springbok">Real Springbok Wikipedia</a></p>
+    <p><a href="https://jackdanis.github.io/Assignment_3_Encyclopedia/Assignment3Main.html">Yorkies</a></p>
+    <p><a href="https://eligrah.github.io/assignments/assignment_2">Penguins</a></p>
+    <p><a href="https://roccoml.github.io/assignments/assignment3.html">Skunks</a></p>
+    <p><a href="https://mada2315.github.io/assignments/assignment3.html">Monkeys</a></p>
+    <p><a href="https://bellacoats.github.io/assignments/assignment3.html">Quokkas</a></p>
+    <p><a href="https://eleanorkreppein.github.io/Assignments/assignment3.html">Lions</a></p>
+    <p><a href="https://spencerw007.github.io/Assignments/Assignment3.html">Dolphins</a></p>
+    <p><a href="http://katie-deng.github.io/assignments/assignment-3.html">Blue Sea Dragons</a></p>
+    <p><a href="https://jackgentleman.github.io/Assignment_3/Assignment_3.html">Blue Jays</a></p>
+    <p><a href="https://ryst4655.github.io/assignment3/assign3.html">Koalas</a></p>
+    <p><a href="https://bencunningham2019.github.io/Assignments/assignment3.html">Chinchillas</a></p>
+    <p><a href="https://revanites2113.github.io/assignments/assignment3/assignment3.html">Dragonflies</a></p>
 </body>
 </html>
