created links to sections

--- a/Assignments/A3Encyclopedia/A3.html
+++ b/Assignments/A3Encyclopedia/A3.html
@@ -70,19 +70,19 @@
     <h2 id="Etymology">Etymology</h2>
     <p>The common name "springbok", first recorded in 1775, comes from the Afrikaans words <em>spring</em> ("jump") and <em>bok</em> ("antelope" or "goat").[2] The scientific name of the springbok is <em>Antidorcas marsupialis</em>. <em>Anti</em> is Greek for "opposite", and <em>dorcas</em> for "gazelle" – identifying the animal as not a gazelle. The specific epithet <em>marsupialis</em> comes from the Latin <em>marsupium</em> ("pocket"), and refers to a pocket-like skin flap which extends along the midline of the back from the tail,[3] which distinguishes the springbok from true gazelles.[4]</p>
 
-    <h2 id="TaxonomyEvolution">Taxonomy and evolution</h2>
+    <h2 id="Taxonomy_Evolution">Taxonomy and evolution</h2>
     <p>The springbok, in the family Bovidae,[5] was first described by the German zoologist Eberhard August Wilhelm von Zimmermann in 1780, who assigned the genus <em>Antilope</em> (blackbuck) to the springbok.[6] In 1845, Swedish zoologist Carl Jakob Sundevall placed the springbok as the sole living member of the genus <em>Antidorcas</em>.[7]</p>
-    <h3>Subspecies</h3>
+    <h3 id="Subspecies">Subspecies</h3>
     <p>Three subspecies of <em>Antidorcas marsupialis</em> are recognised:[2][8]</p>
         <ul>
             <li><em>A. m. angolensis</em> (Blaine, 1922) – Occurs in Benguela and Moçâmedes (southwestern Angola).</li>
             <li><em>A. m. hofmeyri</em> (Thomas, 1926) – Occurs in Berseba and Great Namaqualand (southwestern Africa). Its range lies north of the Orange River, stretching from Upington and Sandfontein through Botswana to Namibia.</li>
             <li><em>A. m. marsupialis</em> (Zimmermann, 1780) – Its range lies south of the Orange River, extending from the northeastern Cape of Good Hope to the Free State and Kimberley.</li>
         </ul>
-    <h3>Evolution</h3>
+    <h3 id="Evolution">Evolution</h3>
     <p>Fossil springbok are known from the Pliocene; the antelope appears to have evolved about three million years ago from a gazelle-like ancestor. Three fossil species of <em>Antidorcas</em> have been identified, in addition to the extant form, and appear to have been widespread across Africa. Two of these, <em>A. bondi</em> and <em>A. australis</em>, became extinct around 7,000 years ago (early Holocene). The third species, <em>A. recki</em>, probably gave rise to the extant form <em>A. marsupialis</em> during the Pleistocene, about 100,000 years ago.[2][9] Fossils have been reported from Pliocene, Pleistocene, and Holocene sites in northern, southern, and eastern Africa. Fossils dating back to 80 and 100 thousand years ago have been excavated at Herolds Bay Cave (Western Cape Province, South Africa) and Florisbad (Free State), respectively.[2]</p>
 
-    <h2>Description</h2>
+    <h2 id="Description">Description</h2>
     <figure>
         <img src="Male_Springbok_Juvenile_Horns.jpg" alt="A picture of a male with short horns, and another picture of them full grown.">
         <figcaption>Horn development in males juvenile (left); sub-adult (right)</figcaption>
@@ -107,7 +107,7 @@
     <p>The skin along the middle of the dorsal side is folded in, and covered with 15 to 20 cm (6 to 8 in) white hair erected by arrector pili muscles (located between hair follicles). This white hair is almost fully concealed by the surrounding brown hairs until the fold opens up, and this is a major feature distinguishing this antelope from gazelles.[2] Springbok differ from gazelles in several other ways; for instance, springbok have two premolars on both sides of either jaw, rather than the three observed in gazelles. This gives a total of 28 teeth in the springbok, rather than 32 of gazelles.[2] Other points of difference include a longer, broader, and rigid bridge to the nose and more muscular cheeks in springbok, and differences in the structure of the horns.[12]</p>
     <p>Both sexes have black horns, about 35–50 cm (14–20 in) long, that are straight at the base and then curve backward. In <em>A. m. marsupialis</em>, females have thinner horns than males; the horns of females are only 60 to 70% as long as those of males. Horns have a girth of 71–83 mm (2.8–3.3 in) at the base; this thins to 56–65 mm (2.2–2.6 in) towards the tip. In the other two subspecies, horns of both sexes are nearly similar. The spoor, narrow and sharp, is 5.5 cm (2.2 in) long.[2]</p>
 
-    <h2>Ecology and behaviour</h2>
+    <h2 id="Ecology_Behavior>Ecology and behaviour</h2>
     <figure>
         <img src="Springbok_herd.jpg">
         <figcaption>A herd on the road Etosha National Park, Namibia</figcaption>
@@ -137,17 +137,17 @@
 
     <p>Springbok are very fast antelopes, clocked at 88 km/h (55 mph). They generally tend to be ignored by carnivores unless they are breeding.[20] Caracals, cheetahs, leopards, spotted hyenas, lions and wild dogs are major predators of the springbok. Southern African wildcats, black-backed jackals, Verreaux's Eagles, martial eagles, and tawny eagles target juveniles.[2] Springbok are generally quiet animals, though they may make occasional low-pitched bellows as a greeting and high-pitched snorts when alarmed.[3]</p>
 
-    <h3>Parasites</h3>
+    <h3 id="Parasites">Parasites</h3>
     <p>A 2012 study on the effects of rainfall patterns and parasite infections on the body of the springbok in Etosha National Park observed that males and juveniles were in better health toward the end of the rainy season. Health of females was more affected by parasites than by rainfall; parasite count in females peaked prior to and immediately after parturition.[21] Studies show that springbok host helminths (Haemonchus, Longistrongylus and Trichostrongylus), ixodid ticks (Rhipicephalus species), lice (Damalinia and Linognathus species).[22][23] Eimeria species mainly affect juveniles.[21]</p>
 
-    <h3>Diet</h3>
+    <h3 id="Diet">Diet</h3>
     <figure>
         <img src="Springbok_Feeding.jpg">
         <figcaption>Springbok feed on succulent grasses.</figcaption>
     </figure>
     <p>Springbok are primarily browsers and may switch to grazing occasionally; they feed on shrubs and young succulents (such as Lampranthus species) before they lignify.[24] They prefer grasses such as Themeda triandra. Springbok can meet their water needs from the food they eat, and are able to survive without drinking water through dry season. In extreme cases, they do not drink any water over the course of their lives. Springbok may accomplish this by selecting flowers, seeds, and leaves of shrubs before dawn, when the food items are most succulent.[25] In places such as Etosha National Park, springbok seek out water bodies where they are available.[24] Springbok gather in the wet season and disperse during the dry season, unlike other African mammals.[24]</p>
 
-    <h3>Reproduction</h3>
+    <h3 id="Reproduction">Reproduction</h3>
     <figure>
         <img src="Springbok_Suckling.jpg">
         <figcaption>A mother suckling her offspring</figcaption>
@@ -156,7 +156,7 @@
 
     <p>Gestation lasts five to six months, after which a single calf (or rarely twins) is born.[13] Most births take place in the spring (October to November), prior to the onset of the rainy season.[12] The infant weighs 3.8 to 5 kg (8.4 to 11.0 lb). The female keeps her calf hidden in cover while she is away. Mother and calf rejoin the herd about three to four weeks after parturition; the young are weaned at five or six months. When the mother gives birth again, the previous offspring, now 6 to 12 months old, deserts her to join herds of adult springbok. Thus, a female can calve twice a year, and even thrice if one calf dies.[3][14] Springbok live for up to 10 years in the wild.[2]</p>
 
-    <h2>Distribution and habitat</h2>
+    <h2 id="Distribution Habitat">Distribution and habitat</h2>
     <figure>
         <img src="Etosha_Pan_Springbok.jpg">
         <figcaption>Springboks on the Etosha pan</figcaption>
@@ -165,12 +165,12 @@
 
     <p>The historic range of the springbok stretched across the dry grasslands, bushlands, and shrublands of south-western and southern Africa; springbok migrated sporadically in southern parts of the range. These migrations are rarely seen nowadays, but seasonal congregations can still be observed in preferred areas of short vegetation, such as the Kalahari desert.[24]</p>
 
-    <h2>Threats and conservation</h2>
+    <h2 id="Threats_Conservation">Threats and conservation</h2>
     <p>The springbok has been classified as least concern on the IUCN Red List. No major threats to the long-term survival of the species are known.[28] The springbok is one of the few antelope species with a positive population trend.[24][29]</p>
 
     <p>Springbok occur in several protected areas across their range: Makgadikgadi and Nxai National Park (Botswana); Kgalagadi Transfrontier Park between Botswana and South Africa; Etosha National Park and Namib-Naukluft Park (Namibia); Mokala and Karoo National Parks and a number of provincial reserves in South Africa.[28] In 1999, Rod East of the IUCN SSC Antelope Specialist Group estimated the springbok population in South Africa at more than 670,000, noting that it might be an underestimate. However, estimates for Namibia, Angola, Botswana, Transvaal, Karoo, and the Free State (which gave a total population estimate of nearly 2,000,000 – 2,500,000 animals in southern Africa), were in complete disagreement with East's estimate. Springbok are under active management in several private lands. Small populations have been introduced into private lands and provincial areas of KwaZulu-Natal.[28][24]</p>
 
-    <h2>Relationship with humans</h2>
+    <h2 id="Human_Relationship">Relationship with humans</h2>
     <figure>
         <img src="Springbok_Coin_5Shilling.png">
         <figcaption>Silver coin: 5 shilling, 1949 – Springbok in the center, date above, value below</figcaption>
