--- a/Assignments/A3Encyclopedia/A3.html
+++ b/Assignments/A3Encyclopedia/A3.html
@@ -107,7 +107,7 @@
     <p>The skin along the middle of the dorsal side is folded in, and covered with 15 to 20 cm (6 to 8 in) white hair erected by arrector pili muscles (located between hair follicles). This white hair is almost fully concealed by the surrounding brown hairs until the fold opens up, and this is a major feature distinguishing this antelope from gazelles.[2] Springbok differ from gazelles in several other ways; for instance, springbok have two premolars on both sides of either jaw, rather than the three observed in gazelles. This gives a total of 28 teeth in the springbok, rather than 32 of gazelles.[2] Other points of difference include a longer, broader, and rigid bridge to the nose and more muscular cheeks in springbok, and differences in the structure of the horns.[12]</p>
     <p>Both sexes have black horns, about 35–50 cm (14–20 in) long, that are straight at the base and then curve backward. In <em>A. m. marsupialis</em>, females have thinner horns than males; the horns of females are only 60 to 70% as long as those of males. Horns have a girth of 71–83 mm (2.8–3.3 in) at the base; this thins to 56–65 mm (2.2–2.6 in) towards the tip. In the other two subspecies, horns of both sexes are nearly similar. The spoor, narrow and sharp, is 5.5 cm (2.2 in) long.[2]</p>
 
-    <h2 id="Ecology_Behavior>Ecology and behaviour</h2>
+    <h2 id="Ecology_Behavior">Ecology and behaviour</h2>
     <figure>
         <img src="Springbok_herd.jpg">
         <figcaption>A herd on the road Etosha National Park, Namibia</figcaption>
