--- a/Assignments/A3Encyclopedia/A3.html
+++ b/Assignments/A3Encyclopedia/A3.html
@@ -156,7 +156,7 @@
 
     <p>Gestation lasts five to six months, after which a single calf (or rarely twins) is born.[13] Most births take place in the spring (October to November), prior to the onset of the rainy season.[12] The infant weighs 3.8 to 5 kg (8.4 to 11.0 lb). The female keeps her calf hidden in cover while she is away. Mother and calf rejoin the herd about three to four weeks after parturition; the young are weaned at five or six months. When the mother gives birth again, the previous offspring, now 6 to 12 months old, deserts her to join herds of adult springbok. Thus, a female can calve twice a year, and even thrice if one calf dies.[3][14] Springbok live for up to 10 years in the wild.[2]</p>
 
-    <h2 id="Distribution Habitat">Distribution and habitat</h2>
+    <h2 id="Distribution_Habitat">Distribution and habitat</h2>
     <figure>
         <img src="Etosha_Pan_Springbok.jpg">
         <figcaption>Springboks on the Etosha pan</figcaption>
@@ -186,8 +186,9 @@
 
     <p>The cap badge of The Royal Canadian Dragoons has featured a springbok since 1913, a reference to the unit's involvement in the Second Boer War.[40]</p>
 
-    <h2 id="External_Links">External Links</h2>
+    <h2 id="References">References</h2>
     <p><a href="https://en.wikipedia.org/wiki/Springbok">Real Springbok Wikipedia</a></p>
+    <h2 id="External_Links">External Links</h2>
     <p><a href="https://jackdanis.github.io/Assignment_3_Encyclopedia/Assignment3Main.html">Yorkies</a></p>
     <p><a href="https://eligrah.github.io/assignments/assignment_2">Penguins</a></p>
     <p><a href="https://roccoml.github.io/assignments/assignment3.html">Skunks</a></p>
