created breaks in captions

--- a/Assignments/A3Encyclopedia/A3.html
+++ b/Assignments/A3Encyclopedia/A3.html
@@ -14,25 +14,25 @@
     <p><em>This article is about the antelope. For the "Springboks", see South Africa national rugby union team. For other uses, see Springbok (disambiguation).</em></p>
     <figure>
         <img src="Male_Springbok_Etosha_2012.jpg">
-        <figcaption>Springbok 
-            Temporal range: Pleistocene–Recent 
-            Male at Etosha National Park
-            Scientific classification
-            Kingdom:	Animalia
-            Phylum:	Chordata
-            Class:	Mammalia
-            Order:	Artiodactyla
-            Family:	Bovidae
-            Subfamily:	Antilopinae
-            Tribe:	Antilopini
-            Genus:	Antidorcas
-            Species:	A. marsupialis
-            Binomial name
-            Antidorcas marsupialis
-            (Zimmermann, 1780)
-            Subspecies
-            A. m. angolensis (Blaine, 1922)
-            A. m. hofmeyri (Thomas, 1926)
+        <figcaption>Springbok<br>
+            Temporal range: Pleistocene–Recent<br>
+            Male at Etosha National Park<br>
+            Scientific classification<br>
+            Kingdom: Animalia<br>
+            Phylum: Chordata<br>
+            Class: Mammalia<br>
+            Order: Artiodactyla<br>
+            Family: Bovidae<br>
+            Subfamily: Antilopinae<br>
+            Tribe: Antilopini<br>
+            Genus: Antidorcas<br>
+            Species: A. marsupialis<br>
+            Binomial name<br>
+            Antidorcas marsupialis<br>
+            (Zimmermann, 1780)<br>
+            Subspecies<br>
+            A. m. angolensis (Blaine, 1922)<br>
+            A. m. hofmeyri (Thomas, 1926)<br>
             A. m. marsupialis (Zimmermann, 1780)</figcaption>
     </figure>
     <figure>
@@ -88,7 +88,8 @@
     <hr>
     <figure>
         <img src="Male_Springbok_Juvenile_Horns.jpg" alt="A picture of a male with short horns, and another picture of them full grown.">
-        <figcaption>Horn development in males juvenile (left); sub-adult (right)</figcaption>
+        <figcaption>Horn development in males<br>
+            juvenile (left); sub-adult (right)</figcaption>
     </figure>
 
     <p>The springbok is a slender antelope with long legs and neck. Both sexes reach 71–86 cm (28–34 in) at the shoulder with a head-and-body length typically between 120 and 150 cm (47 and 59 in).[2] The weights for both sexes range between 27 and 42 kilograms (60 and 93 lb). The tail, 14 to 28 cm (5.5 to 11.0 in) long, ends in a short, black tuft.[2][10] Major differences in the size and weight of the subspecies are seen. A study tabulated average body measurements for the three subspecies. <em>A. m. angolensis</em> males stand 84 cm (33 in) tall at the shoulder, while females are 81 cm (32 in) tall. The males weigh around 31 kg (68 lb), while the females weigh 32 kg (71 lb). <em>A. m. hofmeyri</em> is the largest subspecies; males are nearly 86 cm (34 in) tall, and the notably shorter females are 71 cm (28 in) tall. The males, weighing 42 kg (93 lb), are heavier than females, that weigh 35 kg (77 lb). However, <em>A. m. marsupialis</em> is the smallest subspecies; males are 75 cm (30 in) tall and females 72 cm (28 in) tall. Average weight of males is 31 kg (68 lb), while for females it is 27 kg (60 lb).[2] Another study showed a strong correlation between the availability of winter dietary protein and the body mass.[11]</p>
@@ -114,7 +115,8 @@
     <hr>
     <figure>
         <img src="Springbok_herd.jpg">
-        <figcaption>A herd on the road Etosha National Park, Namibia</figcaption>
+        <figcaption>A herd on the road<br>
+            Etosha National Park, Namibia</figcaption>
     </figure>
 
     <p>Springbok are mainly active around dawn and dusk. Activity is influenced by weather; springbok can feed at night in hot weather, and at midday in colder months. They rest in the shade of trees or bushes, and often bed down in the open when weather is cooler.[13]</p>
